Freedom Sanbox Ant Deploy/src/objects/Wellness_Option_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Question_Option_List__c</referenceTo>
        <relationshipLabel>Wellness Option Details</relationshipLabel>
        <relationshipName>Wellness_Option_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Explaination__c</fullName>
        <label>Explaination</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuestionMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QuestionMaster</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipLabel>Wellness Option Details</relationshipLabel>
        <relationshipName>Wellness_Option_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wellness_card_Detail__c</fullName>
        <label>Wellness card Detail</label>
        <referenceTo>Wellness_Card_Detail__c</referenceTo>
        <relationshipLabel>Wellness Option Details</relationshipLabel>
        <relationshipName>Wellness_Option_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wellness Option Detail</label>
    <nameField>
        <label>Wellness Option Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wellness Option Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>